--- a/clase4/EurekaCS/src/pe/egcc/eurekacs/view/MantClientesView.form
+++ b/clase4/EurekaCS/src/pe/egcc/eurekacs/view/MantClientesView.form
@@ -179,6 +179,9 @@
           <Image iconType="3" name="/pe/egcc/eurekacs/img/PDF.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
